# pipecat-call-agent

./: README.md
server/: .env.example  bot.py  pyproject.toml
