[project]
name = "pipecat-call-agent"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[deepgram,elevenlabs,local,local-smart-turn-v3,runner,silero,webrtc,whisper,openai]",
    "pipecat-ai-whisker",
    "pipecat-ai-tail",
    "piper-tts[http]"
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]